# codeuchain

./: .eslintrc.json  .gitignore  .release.json  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  CONVERTER_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  README.new.md  RELEASE.md  RESOLUTION_COMPLETE.md  TYPED_FEATURES_IMPLEMENTATION_PLAN.md  VERSIONS.json  VERSION_AUDIT.md  VERSION_ISSUE_SUMMARY.md  VERSION_QUICK_REFERENCE.md  go.work  todos.md  universal-ci.config.json  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore_request.md  feature_request.md
.github/instructions/: INDEX.md  README.md  contributing.instructions.md  csharp.instructions.md  go.instructions.md  javascript.instructions.md  python.instructions.md  rust.instructions.md  testing.instructions.md  typed_features_implementation.instructions.md
.github/workflows/: conan-center-publish.yml  package-cpp-release.yml  publish_release_assets.yml  universal-ci.yml
buf-json/: README.md  build.js  config.proto  debug-protobuf.js  json-reader.js  json-sharer.js  package-lock.json  package.json  performance-benchmark.js  test-bidirectional-writer.js  test-comprehensive.js  test-hybrid-reader.js  test-json-formatting.js  test-protobuf-compiler.js  test-protobuf-runtime-loader.js  test-schema-generator.js  todo.md
buf-json/data/: base.json  debug-test.json  dev-config.json  format-test.json  prod-config.json  test-config.json  test-export-formatted.json
buf-json/performance-results/: quick-medium-temp.json  quick-medium.proto  quick-small-temp.json  quick-small.proto
cpp-package/codeuchain-cpp-v1.0.0/: CMakeLists.txt
docs/: 404.html  CNAME  CONAN_PUBLISHING.md  CONVERTER.md  CPP_PACKAGING_SUMMARY.md  CPP_VERIFICATION_CHECKLIST.md  RELEASE_FLOW.md  TYPED_FEATURES_SPECIFICATION.md  WASM_INTEROPERABILITY_VISION.md  index.html  router-test.html  story-time.md
docs/cobol/: index.html  llm-full.txt  llm.txt
docs/components/: ai-love-letter.html  build.js  core-concepts.html  demo.js  developer-benefits.html  floating-navigation.html  footer.html  head.html  hero.html  json-reader.js  language-navigation.html  logo-link.html  logo.html  navigation.html  package-lock.json  quick-start.html  scripts.html  template.html
docs/cpp/: index.html  llm-full.txt  llm.txt
docs/csharp/: index.html  llm-full.txt  llm.txt
docs/diagrams/: ASCII_PIPELINES.txt
docs/go/: index.html  llm-full.txt  llm.txt
docs/java/: index.html  llm-full.txt  llm.txt
docs/javascript/: index.html  llm-full.txt  llm.txt
docs/pseudo/: index.html  llm-full.txt  llm.txt
docs/python/: index.html  llm-full.txt  llm.txt
docs/rust/: index.html  llm-full.txt  llm.txt
releases/codeuchain-cpp-v1.0.0/: CMakeLists.txt  README.md  USAGE.md  build.sh
releases/codeuchain-cpp-v1.0.0/cmake/: codeuchain-config.cmake.in
releases/codeuchain-cpp-v1.0.0/examples/: benchmark_chain.cpp  typed_context_example.cpp
releases/codeuchain-cpp-v1.0.0/include/codeuchain/: chain.hpp  codeuchain.hpp  context.hpp.backup  link.hpp
releases/codeuchain-cpp-v1.0.0/src/: typed_context.cpp
releases/codeuchain-cpp-v1.0.0/src/core/: context.cpp  middleware.cpp
releases/codeuchain-csharp-v1.0.0/: CodeUChain.csproj  CodeUChain.sln  TypedFeaturesTestRunner.csproj  readme.md
releases/codeuchain-go-v1.0.0/: README.md  codeuchain.go  codeuchain_test.go  go.mod
releases/codeuchain-javascript-v1.0.0/: README.md  index.d.ts  index.ts  jest.config.json  package-lock.json  package.json  types.d.ts
releases/codeuchain-javascript-v1.1.1/: USAGE.md  index.d.ts  jest.config.json  package-lock.json  package.json  tsconfig.json  types.d.ts
releases/codeuchain-python-v1.0.0/: LIBRARY_STRUCTURE.md  README.md
releases/codeuchain-python-v2.0.0/: codeuchain-2.0.0-py3-none-any.whl
scripts/: clean_release_artifacts.sh  create_release_archives.sh  package_all_releases.sh  package_cpp_release.sh  release.sh  upload_release_assets.sh  upload_release_assets_by_tag.sh
(+155 files in other folders)
